# AdventOfCode

./: .gitignore  README.md  pyproject.toml
2023/day1/: README.md  part1.py
2023/day10/: part1.py  part2.py
2023/day11/: part2.py
2023/day12/: part2.py  part2_v2.py
2023/day13/: part1.py
2023/day14/: part2.py
2023/day15/: part2.py
2023/day16/: part1.py
2023/day17/: part1.py
2023/day18/: part1.py  part2.py
2023/day19/: part1.py  part2.py
2023/day2/: README.md  part1.py  part2.py
2023/day20/: part2.py
2023/day3/: README.md
2023/day4/: README.md  part1.py  part2.py
2023/day5/: README.md  part2.py
2023/day6/: README.md
2023/day7/: README.md  part2.py
2023/day8/: README.md  part2.py
2023/day9/: README.md  part2.py
2024/day2/: part1.py  part2.py
2024/day3/: part2.py
2024/day4/: part2.py
2024/day5/: part1.py
aoc_2015/day1/: part1.py  part2.py
aoc_2015/day10/: part1.py
aoc_2015/day2/: part1.py  part2.py
aoc_2015/day3/: part1.py  part2.py
aoc_2015/day4/: part1.py  part2.py
aoc_2015/day5/: part1.py  part2.py
aoc_2015/day6/: part1.py  part2.py
aoc_2015/day7/: part1.py  part2.py
aoc_2015/day8/: part1.py  part2.py
aoc_2015/day9/: part1.py  part2.py
aoc_2016/day1/: part1.py  part2.py
aoc_2016/day2/: part1.py  part2.py
aoc_2016/day3/: part1.py  part2.py
aoc_2016/day4/: part1.py  part2.py
aoc_2016/day5/: part1.py  part2.py
aoc_2016/day6/: part1.py  part2.py
aoc_2016/day7/: part1.py  part2.py
aoc_2016/day8/: part1.py  part2.py
aoc_2016/day9/: part1.py  part2.py
aoc_2017/day1/: part1.py  part2.py
aoc_2017/day10/: part1.py  part2.py
aoc_2017/day11/: part1.py  part2.py
aoc_2017/day12/: part1.py  part2.py
aoc_2017/day13/: part1.py  part2.py
aoc_2017/day14/: part1.py  part2.py
aoc_2017/day15/: part1.py  part2.py
aoc_2017/day16/: part1.py  part2.py
aoc_2017/day17/: part1.py  part2.py
aoc_2017/day18/: part1.py  part2.py
aoc_2017/day19/: part1.py  part2.py
aoc_2017/day2/: part1.py  part2.py
aoc_2017/day20/: part1.py  part2.py
aoc_2017/day21/: part1.py  part2.py
aoc_2017/day22/: part1.py  part2.py
aoc_2017/day23/: part1.py  part2.py
aoc_2017/day24/: part1.py  part2.py
aoc_2017/day25/: part1.py
aoc_2017/day3/: part1.py  part2.py
aoc_2017/day4/: part1.py  part2.py
aoc_2017/day5/: part1.py  part2.py
aoc_2017/day6/: part1.py  part2.py
aoc_2017/day7/: part1.py  part2.py
aoc_2017/day8/: part1.py  part2.py
aoc_2017/day9/: part1.py  part2.py
aoc_2018/day04/: part1.py  part2.py
aoc_2018/day05/: part1.py  part2.py
aoc_2018/day1/: part1.py  part2.py
aoc_2018/day2/: part1.py  part2.py
aoc_2018/day3/: part1.py  part2.py
aoc_2019/day1/: part1.py  part2.py
aoc_2019/day11/: part1.py  part2.py
aoc_2019/day12/: part1.py  part2.py
aoc_2019/day13/: part1.py  part2.py
aoc_2019/day14/: part1.py  part2.py
aoc_2019/day15/: part1.py  part2.py
aoc_2019/day16/: part1.py  part2.py
aoc_2019/day17/: intcode2.py  part1.py  part2.py
aoc_2019/day2/: part1.py  part2.py
aoc_2019/day3/: part1.py  part2.py
aoc_2019/day4/: part1.py  part2.py
aoc_2019/day5/: part1.py  part2.py
aoc_2019/day6/: part1.py  part2.py
aoc_2019/day7/: intcode.py  part1.py  part2.py
aoc_2019/day8/: part1.py  part2.py
aoc_2019/day9/: part1.py  part2.py
aoc_2020/day1/: part1.py  part2.py
aoc_2020/day10/: part1.py  part2.py
aoc_2020/day11/: part1.py  part2.py
aoc_2020/day12/: part1.py
aoc_2020/day2/: part1.py  part2.py
aoc_2020/day3/: part1.py  part2.py
aoc_2020/day4/: part1.py  part2.py
aoc_2020/day5/: part1.py  part2.py
aoc_2020/day6/: part1.py  part2.py
aoc_2020/day7/: part1.py  part2.py
aoc_2020/day8/: part1.py  part2.py
aoc_2020/day9/: part1.py  part2.py
aoc_2021/day1/: part1.py  part2.py
aoc_2021/day10/: part1.py  part2.py
aoc_2021/day11/: part1.py  part2.py
aoc_2021/day12/: part1.py  part2.py
common/: structures.py
(+134 files in other folders)
