[project]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = [
    { email = "contact@codexus.fr", name = "Yohann MARTIN" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.17.1",
    "ruff>=0.12.8",
    "shapely>=2.1.1",
    "types-shapely>=2.1.0.20250809",
]

[tool.mypy]
strict = true

[tool.ruff]
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # pyflakes
    "I",        # isort
    "C",        # flake8-comprehensions
    "B",        # flake8-bugbear
    "UP",       # pyupgrade,
    "N",        # pep8-naming
    "S",        # flake8-bandit
    "ASYNC",    # flake8-async
    "DTZ",      # flake8-datetimez
    "PTH",      # flake8-use-pathlib
    "RUF",      # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by ruff
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Opinionated warning on exception chaining
    "S101",  # Asserts
    "C901",  # Too complex
    "E741",  # Ambiguous variable name
    "S324",  # md5
    "S105",  # hardcoded-password-string
]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
